--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,8 @@ if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
 	throw new UnsupportedOperationException("Yarn's buildscript requires Java 16 or higher.")
 }
 
+if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+	System.err.println("Java 17 is highly recommended for using yarn. Javadoc generation will be disabled.")
+}
+
 rootProject.name = "yarn"
