Update mappingpoet to include a warning for records' behavior under reflection
Signed-off-by: liach <liach@users.noreply.github.com>

--- a/build.gradle
+++ b/build.gradle
@@ -889,7 +889,7 @@ javadoc {
 				'implSpec:a:Implementation Requirements:',
 				'implNote:a:Implementation Note:'
 		)
-		taglets "net.fabricmc.mappingpoet.jd.MappingTaglet"
+		taglets "net.fabricmc.mappingpoet.jd.RecordWarningTaglet", "net.fabricmc.mappingpoet.jd.MappingTaglet"
 		// taglet path, header, extra stylesheet settings deferred
 		it.use()
 
