--- a/build.gradle
+++ b/build.gradle
@@ -452,22 +452,10 @@ task yarnWithoutUnpick(dependsOn: mapIntermediaryJar, type: JavaExec) {
 	jvmArgs "-Xmx2048m"
 }
 
-task yarnUnpicked(dependsOn: "unpickIntermediaryJar", type: JavaExec) {
-	logger.lifecycle(":yarnUnpicked is deprecated, unpick is enabled by default")
-	
-	group = yarnGroup
-
-	classpath = configurations.enigmaRuntime
-	mainClass = 'cuchaz.enigma.gui.Main'
-
-	args '-jar'
-	args unpickedJar.getAbsolutePath()
-	args '-mappings'
-	args mappingsDir.getAbsolutePath()
-	args '-profile'
-	args 'enigma_profile.json'
-
-	jvmArgs "-Xmx2048m"
+task yarnUnpicked(dependsOn: "yarn") {
+	doLast {
+		logger.lifecycle(":yarnUnpicked is deprecated, unpick is enabled by default")
+	}
 }
 
 task checkMappings(dependsOn: mapIntermediaryJar) {
