--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ plugins {
 	id 'net.fabricmc.filament' version '0.3.0'
 }
 
-def minecraft_version = "1.18.1-pre1"
+def minecraft_version = "1.18.1-rc1"
 
 def ENV = System.getenv()
 // Fetch build number from Github Actions
