--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java: [17-jdk]
+        java: [17-jdk, 18-jdk]
     runs-on: ubuntu-20.04
     container:
       image: openjdk:${{ matrix.java }}
@@ -14,7 +14,7 @@ jobs:
       - uses: gradle/wrapper-validation-action@v1
       - run: ./gradlew build javadocJar checkMappings --stacktrace
       - name: Build artifacts
-        if: ${{ matrix.java == '17-jdk' }}
+        if: ${{ matrix.java == '18-jdk' }}
         continue-on-error: true
         uses: actions/upload-artifact@v2
         with:
