Set ignore-source-errors

--- a/build.gradle
+++ b/build.gradle
@@ -867,6 +867,7 @@ javadoc {
 		it.use()
 
 		addBooleanOption "-allow-script-in-comments", true
+		addBooleanOption "-ignore-source-errors", true
 		links(
 				'https://guava.dev/releases/21.0/api/docs/',
 				'https://www.javadoc.io/doc/com.google.code.gson/gson/2.8.0/',
