--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,11 @@ dependencies {
 	decompileClasspath "net.fabricmc:cfr:${project.cfr_version}"
 	mappingPoetJar "net.fabricmc:mappingpoet:${project.mappingpoet_version}"
 	unpick "net.fabricmc.unpick:unpick-cli:${project.unpick_version}"
+	// Update asm to allow running on JDK 18
+	unpick "org.ow2.asm:asm:9.2"
+	unpick "org.ow2.asm:asm-tree:9.2"
+	unpick "org.ow2.asm:asm-commons:9.2"
+	unpick "org.ow2.asm:asm-util:9.2"
 }
 
 def setupGroup = "jar setup"
@@ -862,6 +867,7 @@ javadoc {
 		it.use()
 
 		addBooleanOption "-allow-script-in-comments", true
+		addBooleanOption "-ignore-source-errors", true
 		links(
 				'https://guava.dev/releases/21.0/api/docs/',
 				'https://www.javadoc.io/doc/com.google.code.gson/gson/2.8.0/',
