--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ plugins {
 	id 'net.fabricmc.filament' version '0.3.0'
 }
 
-def minecraft_version = "1.18.1"
+def minecraft_version = "1.19_deep_dark_experimental_snapshot-1"
 
 def ENV = System.getenv()
 // Fetch build number from Github Actions
@@ -144,11 +144,11 @@ task downloadVersionsManifest {
 	group = setupGroup
 	//inputs.property "mc_ver", minecraft_version
 	inputs.property "currenttime", new Date()
-	def manifestFile = new File(cacheFilesMinecraft, "version_manifest_v2.json")
+	def manifestFile = new File(cacheFilesMinecraft, "experimental_versions.json")
 	outputs.file(manifestFile)
 	doLast {
 		logger.lifecycle(":downloading minecraft versions manifest")
-		FileUtils.copyURLToFile(new URL("https://launchermeta.mojang.com/mc/game/version_manifest_v2.json"), manifestFile)
+		FileUtils.copyURLToFile(new URL("https://maven.fabricmc.net/net/minecraft/experimental_versions.json"), manifestFile)
 	}
 }
 
