Move filament into the yarn repo. (#3296)
This will make further developments a lot easier.

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins {
 	id 'de.undercouch.download' version '4.1.2'
 	id 'maven-publish'
 	id "com.diffplug.spotless" version "6.4.2"
-	id 'net.fabricmc.filament' version '0.3.0'
+	id 'net.fabricmc.filament'
 }
 
 def minecraft_version = "1.19.2"
