--- a/filament/build.gradle
+++ b/filament/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation "net.fabricmc.unpick:unpick:$properties.unpick_version"
 	implementation "net.fabricmc.unpick:unpick-format-utils:$properties.unpick_version"
 	implementation "net.fabricmc:tiny-mappings-parser:$properties.tiny_mappings_parser_version"
+	implementation "net.fabricmc:tiny-remapper:$properties.tiny_remapper_version"
 
 	testImplementation platform("org.junit:junit-bom:$properties.junit_version")
 	testImplementation 'org.junit.jupiter:junit-jupiter'
