No need for loom changes

--- a/filament/build.gradle
+++ b/filament/build.gradle
@@ -17,7 +17,6 @@ repositories {
 		url 'https://maven.fabricmc.net'
 	}
 	mavenCentral()
-	mavenLocal()
 }
 
 dependencies {
@@ -31,7 +30,7 @@ dependencies {
 	implementation "com.fasterxml.jackson.core:jackson-databind:2.13.3"
 
 	// Contains a number of useful utilities we can re-use.
-	implementation ("net.fabricmc:fabric-loom:1.0.local") {
+	implementation ("net.fabricmc:fabric-loom:1.0.7") {
 		transitive = true
 	}
 
