--- a/filament/build.gradle
+++ b/filament/build.gradle
@@ -13,6 +13,8 @@ file('../gradle.properties').newInputStream().withCloseable {
 	properties.load(it)
 }
 
+def ENV = System.getenv()
+
 repositories {
 	maven {
 		name "Fabric Repository"
