--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
 	dependencies {
 		classpath "cuchaz:enigma-cli:${project.enigma_version}"
 		classpath "net.fabricmc:stitch:${project.stitch_version}"
-		classpath "commons-io:commons-io:2.11.0"
 		classpath "de.undercouch:gradle-download-task:4.1.1"
 		classpath "net.fabricmc.unpick:unpick:${project.unpick_version}"
 		classpath "net.fabricmc.unpick:unpick-format-utils:${project.unpick_version}"
@@ -109,23 +108,21 @@ def namedJar = file("${minecraft_version}-named.jar")
 def serverIntermediaryJar = file("${minecraft_version}-server-intermediary.jar")
 def libs = new File("build/libs/")
 
+def minecraftLibraries = tasks.minecraftLibraries.files
+
 import com.google.common.hash.Hashing
 import cuchaz.enigma.command.CheckMappingsCommand
 import cuchaz.enigma.command.ComposeMappingsCommand
 import cuchaz.enigma.command.ConvertMappingsCommand
 import cuchaz.enigma.command.MapSpecializedMethodsCommand
-import groovy.json.JsonSlurper
 import net.fabricmc.filament.task.MapJarTask
 import net.fabricmc.stitch.commands.CommandMergeTiny
 import net.fabricmc.stitch.commands.CommandReorderTiny
 import net.fabricmc.stitch.commands.CommandRewriteIntermediary
 import net.fabricmc.stitch.commands.tinyv2.CommandMergeTinyV2
 import net.fabricmc.stitch.commands.tinyv2.CommandReorderTinyV2
-import net.fabricmc.stitch.merge.JarMerger
 import net.fabricmc.nameproposal.MappingNameCompleter
-import org.apache.commons.io.FileUtils
 
-import java.nio.charset.StandardCharsets
 import java.util.zip.GZIPOutputStream
 
 boolean validateChecksum(File file, String checksum) {
@@ -239,7 +236,7 @@ task mapIntermediaryJar(type: MapJarTask, dependsOn: [downloadIntermediary, merg
 	output = intermediaryJar
 	input = mergeMinecraftJars.outputFile
 	mappings = downloadIntermediary.dest
-	classpath.from configurations.minecraftLibraries
+	classpath.from minecraftLibraries
 	from = 'official'
 	to = 'intermediary'
 }
@@ -249,7 +246,7 @@ task mapServerIntermediaryJar(type: MapJarTask, dependsOn: [downloadIntermediary
 	output = serverIntermediaryJar
 	input = extractBundledServer.outputFile
 	mappings = downloadIntermediary.dest
-	classpath.from configurations.minecraftLibraries
+	classpath.from minecraftLibraries
 	from = 'official'
 	to = 'intermediary'
 }
@@ -467,7 +464,7 @@ task unpickIntermediaryJar(type: JavaExec, dependsOn: [mapIntermediaryJar, "cons
 	doFirst {
 		args intermediaryJar.absolutePath, unpickedJar.absolutePath, remapUnpickDefinitionsIntermediary.output.get().asFile.absolutePath, constantsJar.archiveFile.get().asFile.absolutePath
 
-		configurations.minecraftLibraries.files.forEach {
+		minecraftLibraries.files.forEach {
 			args it.absolutePath
 		}
 	}
@@ -606,7 +603,7 @@ task mapNamedJar(type: MapJarTask, dependsOn: ["mergeV2", "unpickIntermediaryJar
 	output = namedJar
 	input = unpickedJar
 	mappings = mergeV2.output
-	classpath.from configurations.minecraftLibraries
+	classpath.from minecraftLibraries
 	from = 'intermediary'
 	to = 'named'
 	classMappings = [
@@ -616,9 +613,12 @@ task mapNamedJar(type: MapJarTask, dependsOn: ["mergeV2", "unpickIntermediaryJar
 	]
 }
 
+def mcLibsDir = file('build/tmp/mclibs')
+
+// Task to copy all the mc libs into a single directory.
 task syncDependencies(type: Sync) {
-	from configurations.minecraftLibraries
-	into '.gradle/temp/mclibs'
+	from minecraftLibraries
+	into mcLibsDir
 }
 
 def fakeSourceDir = file(".gradle/temp/fakeSource")
@@ -629,7 +629,7 @@ task genFakeSource(type: JavaExec, dependsOn: ["mergeV2", "mapNamedJar", syncDep
 	mainClass = "net.fabricmc.mappingpoet.Main"
 	classpath configurations.mappingPoet
 	// use merged v2 so we have all namespaces in jd
-	args mergeV2.output.getAbsolutePath(), namedJar.getAbsolutePath(), fakeSourceDir.getAbsolutePath(), file('.gradle/temp/mclibs').getAbsolutePath()
+	args mergeV2.output.getAbsolutePath(), namedJar.getAbsolutePath(), fakeSourceDir.getAbsolutePath(), mcLibsDir.getAbsolutePath()
 
 	doLast {
 		logger.lifecycle ":Fake source generated"
@@ -644,7 +644,7 @@ task decompileCFR(type: JavaExec, dependsOn: [mapNamedJar]) {
 	doFirst {
 		file("namedSrc").deleteDir()
 		classpath.from configurations.decompileClasspath
-		classpath.from configurations.minecraftLibraries
+		classpath.from minecraftLibraries
 	}
 }
 
@@ -707,7 +707,7 @@ javadoc {
 		addBooleanOption 'Xdoclint:accessibility', true
 	}
 	source fileTree(fakeSourceDir) + sourceSets.constants.allJava + sourceSets.packageDocs.allJava
-	classpath = configurations.javadocClasspath.plus configurations.minecraftLibraries
+	classpath = configurations.javadocClasspath.plus minecraftLibraries
 
 	doLast {
 		project.copy {
@@ -804,14 +804,6 @@ task checkVersion {
 publish.mustRunAfter checkVersion
 
 class FileOutput extends DefaultTask {
-	@OutputFile
-	File output
-}
-
-class FileOutputInput extends DefaultTask {
-	@InputFile
-	File input
-
 	@OutputFile
 	File output
 }
