--- a/filament/build.gradle
+++ b/filament/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.util.GradleVersion
+
 plugins {
 	id 'java-library'
 	id 'java-gradle-plugin'
@@ -63,5 +65,26 @@ gradlePlugin {
 			id = 'net.fabricmc.filament'
 			implementationClass = 'net.fabricmc.filament.FilamentGradlePlugin'
 		}
+	}
+}
+
+/**
+ * Run this task to download the gradle sources next to the api jar, you may need to manually attach the sources jar
+ */
+task downloadGradleSources() {
+	doLast {
+		// Awful hack to find the gradle api location
+		def gradleApiFile = project.configurations.detachedConfiguration(dependencies.gradleApi()).files.stream()
+			.filter {
+				it.name.startsWith("gradle-api")
+			}.findFirst().orElseThrow()
+
+		def gradleApiSources = new File(gradleApiFile.absolutePath.replace(".jar", "-sources.jar"))
+		def url = "https://services.gradle.org/distributions/gradle-${GradleVersion.current().getVersion()}-src.zip"
+
+		gradleApiSources.delete()
+
+		println("Downloading (${url}) to (${gradleApiSources})")
+		gradleApiSources << new URL(url).newInputStream()
 	}
 }
